before removing buttons

--- a/SelfieFood.App/App.xaml
+++ b/SelfieFood.App/App.xaml
@@ -1,7 +1,6 @@
 ﻿<Application
-    x:Class="camera_Temp.App"
+    x:Class="SelfieFood.App.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:camera_Temp">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 </Application>
