--- a/SelfieFood.SilverlightApp/MainPage.xaml
+++ b/SelfieFood.SilverlightApp/MainPage.xaml
@@ -41,8 +41,8 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
-            <TextBlock Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="РЕКОМЕНДАТОР" Style="{StaticResource PhoneTextNormalStyle}" Margin="12,0"/>
+            <TextBlock Text="сделайте фото" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
@@ -55,7 +55,7 @@
 
             <StackPanel Grid.Row="1" Orientation="Vertical">
                 <Button  Click="btnCapture_Click">Сделать фото</Button>
-                <Button  Click="btnPredictRestraunt">Подобрать ресторан</Button>
+                <Button  Click="btnPredictRestraunt" x:Name="_btnPredict" IsEnabled="False">Подобрать ресторан</Button>
             </StackPanel>
             
         </Grid>
