--- a/SelfieFood.SilverlightApp/Results.xaml
+++ b/SelfieFood.SilverlightApp/Results.xaml
@@ -98,7 +98,7 @@
                     CornerRadius="24" 
                     Grid.Column="1" 
                     Margin="12,0,12,0">
-                        <Image Source="Images/play.png" Stretch="None" x:Name="buttonImage" Tap="OnPlayTap"/>
+                        <Image HorizontalAlignment="Center" VerticalAlignment="Center" Source="Images/like.png" Stretch="None" x:Name="buttonImage" Tap="OnPlayTap"/>
                     </Border>
                     <Border HorizontalAlignment="Stretch" 
                     BorderThickness="0,2,0,0" 
